<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/side5x"
        android:paddingTop="@dimen/side2x"
        android:paddingRight="@dimen/side5x">

        <EditText
            android:id="@+id/etPhone"
            style="@style/text_16_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_outline_black_18dp"
            android:drawablePadding="@dimen/side1x"
            android:hint="@string/please_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/text_16_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side2x"
            android:drawableStart="@drawable/ic_lock_outline_black_18dp"
            android:drawablePadding="@dimen/side1x"
            android:hint="@string/please_input_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side3x"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/button_blue_wrap"
                android:layout_weight="1"
                android:text="@string/login"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="@dimen/side1x"
                app:rippleColor="@color/black_33"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSetting"
                style="@style/button_white"
                android:layout_marginStart="@dimen/side2x"
                android:text="@string/setting"
                app:backgroundTint="@color/white"
                app:rippleColor="@color/gray_99"
                app:cornerRadius="@dimen/side1x"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
