<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_e8"
    android:orientation="vertical"
    tools:context=".fragment.MineFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_primary"
                android:orientation="vertical">

                <com.mycommonlibrary.view.StatusBarHeightView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/side2x">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@mipmap/icon_default_header" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/side2x">

                        <TextView
                            android:id="@+id/tvName"
                            style="@style/text_14_white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="用户姓名" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side2x"
                android:background="@color/white"
                android:divider="@drawable/divider_ver_line"
                android:dividerPadding="1dp"
                android:orientation="vertical"
                android:showDividers="middle|end">

                <Button
                    style="@style/btn_mini_ver"
                    android:drawableStart="@mipmap/icon_test_speed"
                    android:text="@string/test_speed_choose_region" />

                <Button
                    android:id="@+id/btnSetting"
                    android:drawableStart="@mipmap/icon_settings"
                    style="@style/btn_mini_ver"
                    android:text="@string/setting" />

                <Button
                    android:id="@+id/btnLogout"
                    style="@style/btn_mini_ver"
                    android:drawableStart="@mipmap/icon_logout"
                    android:text="@string/exit_login" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>